# vibe-marketing-app

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: __init__.py  ai.py  config.py  db.py  email_sender.py  main.py  models.py  providers.py  scheduler.py  scraping.py
backend/app/routers/: automations.py  calendar.py  campaigns.py  kpis.py  leads.py  mcp_server.py  projects.py  settings.py  tracking.py
frontend/: index.html  package-lock.json  tailwind.config.js
frontend/src/: App.tsx  api.ts  index.css
frontend/src/components/: ProgressBar.tsx  Sidebar.tsx
frontend/src/pages/: Automations.tsx  Calendar.tsx  Campaigns.tsx  Dashboard.tsx  Gaps.tsx  History.tsx  Leads.tsx  Owner.tsx  Product.tsx  Settings.tsx  Tracking.tsx
