[project]
name = "vibe-marketing-backend"
version = "0.1.0"
description = "Backend de la app de marketing IA (vibe coding demo Diego)"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "sqlalchemy>=2.0",
    "google-genai>=0.8",
    "python-multipart>=0.0.9",
    "apscheduler>=3.10",
    "feedparser>=6.0",
    "Pillow>=10.4",
    "tldextract>=5.1",
    "python-slugify>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
